--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: #f7f7f7; /* Soft background */
+            background-color: #f7f7f7;
             font-family: Arial, sans-serif;
         }
 
         header {
-            background-color: #7f9a92; /* Muted green */
+            background-color: #7f9a92;
             padding: 20px;
             text-align: center;
         }
@@ -23,7 +23,7 @@
         }
 
         nav {
-            background-color: #d1e1df; /* Light mint */
+            background-color: #d1e1df;
             padding: 15px;
             text-align: center;
         }
@@ -39,7 +39,7 @@
         }
 
         nav a {
-            color: #5a6f67; /* Dark green */
+            color: #5a6f67;
             text-decoration: none;
             padding: 8px 15px;
             background-color: #ffffff;
@@ -48,7 +48,7 @@
         }
 
         nav a:hover {
-            background-color: #7f9a92; /* Muted green on hover */
+            background-color: #7f9a92;
             color: white;
         }
 
@@ -66,11 +66,11 @@
         }
 
         .blog-item {
-            background-color: #ffffff; /* White background */
+            background-color: #ffffff;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            border: 1px solid #d1e1df; /* Light mint border */
+            border: 1px solid #d1e1df;
             transition: box-shadow 0.3s ease-in-out;
         }
 
@@ -98,7 +98,7 @@
 
         .activity-box a {
             display: block;
-            color: #5a6f67; /* Dark green */
+            color: #5a6f67;
             text-decoration: none;
             padding: 8px;
             border-radius: 4px;
@@ -107,12 +107,12 @@
         }
 
         .activity-box a:hover {
-            background-color: #7f9a92; /* Muted green on hover */
+            background-color: #7f9a92;
             color: white;
         }
 
         footer {
-            background-color: #7f9a92; /* Muted green */
+            background-color: #7f9a92;
             padding: 20px;
             text-align: center;
             color: #ffffff;
@@ -122,7 +122,7 @@
         .contact-form {
             max-width: 400px;
             margin: 0 auto;
-            background-color: #ffffff; /* White background for the form */
+            background-color: #ffffff;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -130,21 +130,21 @@
 
         .contact-form label {
             font-weight: bold;
-            color: #5a6f67; /* Dark green for labels */
+            color: #5a6f67;
             margin-bottom: 5px;
-            display: block; /* Make the label block-level to separate from input */
+            display: block;
         }
 
         input, textarea {
             width: 100%;
             padding: 10px;
             margin: 10px 0;
-            border: 1px solid #d1e1df; /* Light mint border */
+            border: 1px solid #d1e1df;
             border-radius: 4px;
         }
 
         button {
-            background-color: #5a6f67; /* Dark green */
+            background-color: #5a6f67;
             color: white;
             padding: 10px 20px;
             border: none;
@@ -153,7 +153,7 @@
         }
 
         button:hover {
-            background-color: #4a5a52; /* Darker green */
+            background-color: #4a5a52;
         }
     </style>
 </head>
@@ -177,33 +177,33 @@
 
         <div class="blog-section">
             <div class="blog-item" id="blog1">
-                <img src="/api/placeholder/300/200" alt="HTML Basics">
+                <img src="assignment1web/api/placeholder/300/200" alt="HTML Basics">
                 <h3>Learning HTML Basics</h3>
                 <p>My experience with HTML fundamentals and structure. This can be showcased with activity 1, 2, and 3.</p>
                 <div class="activity-box">
-                    <a href="home.html">Activity 1 - Home</a>
-                    <a href="list.html">Activity 2 - Lists</a>
-                    <a href="table.html">Activity 3 - Tables</a>
+                    <a href="assignment1web/home.html">Activity 1 - Home</a>
+                    <a href="assignment1web/list.html">Activity 2 - Lists</a>
+                    <a href="assignment1web/table.html">Activity 3 - Tables</a>
                 </div>
             </div>
             <div class="blog-item" id="blog2">
-                <img src="/api/placeholder/300/200" alt="CSS Styling">
+                <img src="assignment1web/api/placeholder/300/200" alt="CSS Styling">
                 <h3>Understanding HTML Elements: A Detailed Comparison</h3>
                 <p>Explore the similarities and differences between various HTML elements through detailed comparisons and output analysis.</p>
                 <div class="activity-box">
-                    <a href="activity4.html">Activity 4 - Differences</a>
+                    <a href="assignment1web/activity4.html">Activity 4 - Differences</a>
                     <a href="https://github.com/yourusername">Activity 5 - GitHub</a>
                 </div>
             </div>
             <div class="blog-item" id="blog3">
-                <img src="/api/placeholder/300/200" alt="Web Forms">
+                <img src="assignment1web/api/placeholder/300/200" alt="Web Forms">
                 <h3>Working with Forms</h3>
                 <p>Creating interactive web forms and tables, use of styling and semantic HTML.</p>
                 <div class="activity-box">
-                    <a href="signup1.html">Activity 6 - Sign Up</a>
-                    <a href="login1.html">Activity 6 - Login</a>
-                    <a href="form2.html">Activity 6 - Form 2</a>
-                    <a href="activity7.html">Activity 7 - Block/Inline</a>
+                    <a href="assignment1web/signup1.html">Activity 6 - Sign Up</a>
+                    <a href="assignment1web/login1.html">Activity 6 - Login</a>
+                    <a href="assignment1web/form2.html">Activity 6 - Form 2</a>
+                    <a href="assignment1web/activity7.html">Activity 7 - Block/Inline</a>
                 </div>
             </div>
         </div>
