--- a/assignment1web/login1.html
+++ b/assignment1web/login1.html
@@ -104,7 +104,7 @@
 
         <div class="links">
             <a href="#">Forgot Username / Password?</a>
-            <p>Don't have an account? <a href="signup1.html">Sign up</a></p>
+            <p>Don't have an account? <a href="assignment1web/signup1.html">Sign up</a></p>
         </div>
     </form>
 </body>
