--- a/assignment1web/signup1.html
+++ b/assignment1web/signup1.html
@@ -70,7 +70,7 @@
     </style>
 </head>
 <body>
-    <form action="login1.html" method="POST">
+    <form action="assignment1web/login1.html" method="POST">
         <h2>Sign Up</h2>
         <p>Please fill in this form to create an account!</p>
         
