--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             <li><a href="#blog1">Learning HTML Basics</a></li>
             <li><a href="#blog2">Understanding HTML Elements</a></li>
             <li><a href="#blog3">Working with Forms</a></li>
+            <li><a href="#github">GitHub & Web Hosting</a></li> <!-- GitHub section -->
             <li><a href="#contact">Contact Us</a></li>
         </ul>
     </nav>
@@ -192,7 +193,7 @@
                 <p>Explore the similarities and differences between various HTML elements through detailed comparisons and output analysis.</p>
                 <div class="activity-box">
                     <a href="assignment1web/activity4.html">Activity 4 - Differences</a>
-                    <a href="https://github.com/yourusername">Activity 5 - GitHub</a>
+                    <a href="https://github.com/yourusername" target="_blank">Activity 5 - GitHub</a>
                 </div>
             </div>
             <div class="blog-item" id="blog3">
@@ -204,6 +205,25 @@
                     <a href="assignment1web/login1.html">Activity 6 - Login</a>
                     <a href="assignment1web/form2.html">Activity 6 - Form 2</a>
                     <a href="assignment1web/activity7.html">Activity 7 - Block/Inline</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- GitHub & Web Hosting Section -->
+        <div class="blog-section" id="github">
+            <div class="blog-item">
+                <h3>GitHub Repository</h3>
+                <p>Explore my projects on GitHub. Feel free to contribute or fork the repositories.</p>
+                <div class="activity-box">
+                    <a href="https://github.com/tarunireddy-v/webprogramming.git" target="_blank">My GitHub</a>
+                </div>
+            </div>
+
+            <div class="blog-item">
+                <h3>Web Hosting Tutorial</h3>
+                <p>Watch my tutorial video on how to host your web development projects online.</p>
+                <div class="activity-box">
+                    <a href="https://www.youtube.com/watch?v=yourvideoid" target="_blank">Watch the Tutorial</a>
                 </div>
             </div>
         </div>
