--- a/assignment1web/home.html
+++ b/assignment1web/home.html
@@ -8,7 +8,7 @@
     <h2 style="color: #34495e; font-family: 'Arial', sans-serif; font-style: italic; text-align: center; margin-top: 0;">"Learning, growing, and who knows what’s next!"</h2>
 
     <section style="display: flex; align-items: flex-start; margin-top: 20px;">
-        <img src="assignment1web/myphoto.jpg" alt="Profile Picture" style="width: 300px; height: 420px; border-radius: 10px; margin-right: 20px;">
+        <img src="myphoto.jpg" alt="Profile Picture" style="width: 300px; height: 420px; border-radius: 10px; margin-right: 20px;">
         <article style="flex: 3; text-align: justify;">
             <p>
                 <strong>Born and brought up in Kolkata</strong>, I spent my childhood immersed in the city's rich culture, vibrant energy, and incredible food, which greatly shaped my interests and personality. I have always been passionate about <em>Bharatanatyam</em>, a classical dance form I've practiced since childhood, as well as <em>swimming</em> and <em>basketball</em>, which keep me active and disciplined. Traveling is another joy in my life, allowing me to explore diverse cultures and broaden my perspective. Recently, I moved to <strong>Hyderabad</strong>, my parents' hometown, after completing high school, and I find it fascinating to connect with my roots in a new way.
