--- a/assignment1web/activity7.html
+++ b/assignment1web/activity7.html
@@ -12,7 +12,7 @@
 
         <section style="display: flex; align-items: flex-start; margin-top: 20px;">
             <div class="profile-image" style="flex: 1;">
-                <img src="assignment1web/myphoto.jpg" alt="Profile Picture" style="width: 300px; height: 420px; border-radius: 10px; margin-right: 20px;">
+                <img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/myphoto.jpg" alt="Profile Picture" style="width: 300px; height: 420px; border-radius: 10px; margin-right: 20px;">
             </div>
 
             <div class="content" style="flex: 3; text-align: justify;">
