--- a/assignment1web/activity4.html
+++ b/assignment1web/activity4.html
@@ -76,8 +76,8 @@
                 <th>Screenshot output</th>
             </tr>
             <tr>
-                <td><img src="assignment1web/divandspan.png" alt="div and span"></td>
-                <td><img src="assignment1web/divandspanop.png" alt="div and span"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media//divandspan.png" alt="div and span"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/divandspanop.png" alt="div and span"></td>
             </tr>
         </table>
         <div class="elements">
@@ -103,8 +103,8 @@
                 <th>Screenshot output</th>
             </tr>
             <tr>
-                <td><img src="assignment1web/divandsection.png" alt="div and section"></td>
-                <td><img src="assignment1web/divandsectionop.png" alt="div and section"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/divandsection.png" alt="div and section"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/divandsectionop.png" alt="div and section"></td>
             </tr>
         </table>
         <div class="elements">
@@ -130,8 +130,8 @@
                 <th>Screenshot output</th>
             </tr>
             <tr>
-                <td><img src="assignment1web/paragraphandarticle.png" alt="paragraph and article"></td>
-                <td><img src="assignment1web/paragraphandarticleop.png" alt="paragraph and article"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/paragraphandarticle.png" alt="paragraph and article"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/paragraphandarticleop.png" alt="paragraph and article"></td>
             </tr>
         </table>
         <div class="elements">
@@ -157,8 +157,8 @@
                 <th>Screenshot output</th>
             </tr>
             <tr>
-                <td><img src="assignment1web/navandanch.png" alt="navigation and anchor"></td>
-                <td><img src="assignment1web/navandanchop.png" alt="navigation and anchor"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/navandanch.png" alt="navigation and anchor"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/navandanchop.png" alt="navigation and anchor"></td>
             </tr>
         </table>
         <div class="elements">
@@ -184,8 +184,8 @@
                 <th>Screenshot output</th>
             </tr>
             <tr>
-                <td><img src="assignment1web/imageandpic.png" alt="figure and image"></td>
-                <td><img src="assignment1web/imageandpicop.png" alt="figure and image"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/imageandpic.png" alt="figure and image"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/imageandpicop.png" alt="figure and image"></td>
             </tr>
         </table>
         <div class="elements">
@@ -211,8 +211,8 @@
                 <th>Screenshot output</th>
             </tr>
             <tr>
-                <td><img src="assignment1web/labelandlegend.png" alt="label and legend"></td>
-                <td><img src="assignment1web/labelandlegendop.png" alt="label and legend"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/labelandlegend.png" alt="label and legend"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/labelandlegendop.png" alt="label and legend"></td>
             </tr>
         </table>
         <div class="elements">
@@ -238,8 +238,8 @@
                 <th>Screenshot output</th>
             </tr>
             <tr>
-                <td><img src="assignment1web/strongbold.png" alt="strong, bold, emphasis"></td>
-                <td><img src="assignment1web/strongboldop.png" alt="strong, bold, emphasis"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/strongbold.png" alt="strong, bold, emphasis"></td>
+                <td><img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/strongboldop.png" alt="strong, bold, emphasis"></td>
             </tr>
         </table>
         <div class="elements">
