--- a/assignment1web/table.html
+++ b/assignment1web/table.html
@@ -10,7 +10,7 @@
         <caption style="font-size: 1.5em; margin-bottom: 10px;">TABLE</caption>
         <tr>
             <td colspan="2" rowspan="2" width="144" height="72" align="center">
-                <img src="assignment1web/image.jpg" alt="Image" width="100%" height="100%">
+                <img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/image.jpg" alt="Image" width="100%" height="100%">
             </td>
             <td width="72" height="36" bgcolor="#DFB0A0"></td>
             <td rowspan="2" width="72" height="72" align="center" valign="middle">
@@ -32,7 +32,7 @@
             <td colspan="2" width="144" height="36" align="center" valign="middle">
                 <font face="Times New Roman" size="4">
                     <a href="https://example.com">
-                        <img src="assignment1web/hyperlinkimg.jpeg" alt="Visit Example" width="100%" height="100%">
+                        <img src="https://raw.githubusercontent.com/tarunireddy-v/webprogramming/main/media/hyperlinkimg.jpeg" alt="Visit Example" width="100%" height="100%">
                     </a>
                 </font>
             </td>
