--- a/assignment1web/signup1.html
+++ b/assignment1web/signup1.html
@@ -70,7 +70,8 @@
     </style>
 </head>
 <body>
-    <form action="assignment1web/login1.html" method="POST">
+    <!-- Replace 'your-repo-name' with the actual name of your GitHub repository -->
+    <form action="/tarunireddy-v/assignment1web/login1.html" method="POST">
         <h2>Sign Up</h2>
         <p>Please fill in this form to create an account!</p>
         
