--- a/assignment1web/signup1.html
+++ b/assignment1web/signup1.html
@@ -71,7 +71,7 @@
 </head>
 <body>
     <!-- Replace 'your-repo-name' with the actual name of your GitHub repository -->
-    <form action="/tarunireddy-v/assignment1web/login1.html" method="POST">
+    <form action="/tarunireddy-v/assignment1web/login1.html" method="GET">
         <h2>Sign Up</h2>
         <p>Please fill in this form to create an account!</p>
         
