--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <p>Explore the similarities and differences between various HTML elements through detailed comparisons and output analysis.</p>
                 <div class="activity-box">
                     <a href="assignment1web/activity4.html">Activity 4 - Differences</a>
-                    <a href="https://github.com/yourusername" target="_blank">Activity 5 - GitHub</a>
+                    <a href="https://github.com/tarunireddy-v" target="_blank">Activity 5 - GitHub</a>
                 </div>
             </div>
             <div class="blog-item" id="blog3">
