--- a/assignment1web/login1.html
+++ b/assignment1web/login1.html
@@ -95,16 +95,11 @@
             <input type="password" name="password" placeholder="Enter password" required>
         </div>
 
-        <div class="checkbox-group">
-            <input type="checkbox" id="show-password" name="show-password">
-            <label for="show-password">Show Password</label>
-        </div>
-
         <input type="submit" value="SIGN IN">
 
         <div class="links">
             <a href="#">Forgot Username / Password?</a>
-            <p>Don't have an account? <a href="assignment1web/signup1.html">Sign up</a></p>
+            <p>Don't have an account? <a href="signup1.html">Sign up</a></p>
         </div>
     </form>
 </body>
