--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <!-- Video Section -->
             <div class="blog-item">
                 <video controls>
-                    <source src="path-to-your-video.mp4" type="video/mp4">
+                    <source src="media/WEBHOSTING.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <h3>Web Development Overview</h3>
