--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <li><a href="#blog1">Learning HTML Basics</a></li>
             <li><a href="#blog2">Understanding HTML Elements</a></li>
             <li><a href="#blog3">Working with Forms</a></li>
-            <li><a href="#github">GitHub & Web Hosting</a></li> <!-- GitHub section -->
+            <li><a href="#github">GitHub & Web Hosting</a></li> 
             <li><a href="#contact">Contact Us</a></li>
         </ul>
     </nav>
